--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+!milestones/**/lib/*.jar
