Include libs in jar

--- a/milestones/M2/kchen330.gradle
+++ b/milestones/M2/kchen330.gradle
@@ -22,6 +22,9 @@ jar {
                    'Implementation-Version': version,
                    'Main-Class': 'edu.gatech.oad.antlab.pkg1.AntLabMain'
     }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 // vim:ft=groovy
