--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ version = '1.0'
 
 defaultTasks 'jar'
 
-mainClassName = 'Main'
+mainClassName = 'App'
 
 repositories {
     mavenCentral()
@@ -16,7 +16,7 @@ jar {
     manifest {
         attributes 'Implementation-Title': 'MULE',
                    'Implementation-Version': version,
-                   'Main-Class': 'Main'
+                   'Main-Class': 'App'
     }
 }
 
