Finish implementation of game config page
The done button doesn't do anything at the moment since
there is no game to switch to.

--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,7 @@ mainClassName = 'App'
 sourceSets {
     main {
         resources {
-            srcDirs = ["src/main/java"]
-            includes = ["**/*.fxml"]
+            srcDirs = ["src/main/java", "src/main/resources"]
         }
     }
 }
